use doUpdate() in doSave() method